# langford

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
gtests/: CMakeLists.txt  big_integers_test.cpp  result_test.cpp
src/: big_integers.hpp  gray.hpp  initial_data.hpp  instance.hpp  main.cpp  main.hpp  task.hpp
